--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,32 +1,13 @@
+*{
+  margin:0;
+  padding:0;
+}
+a{
+  text-decoration: none
+}
+body{
+  background-image: linear-gradient(to bottom right, rgb(50, 47, 47), rgb(40, 35, 35));
+}
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
